# bow-mineracao

./: .gitignore  main.ipynb  pyproject.toml  relatorio.ipynb  submission.csv
data/: sample_submission.csv
